corset arrangement